--- a/Prescient/static/styles/dashboard-styles.css
+++ b/Prescient/static/styles/dashboard-styles.css
@@ -148,3 +148,21 @@ tbody {
   color: white;
   transition: 0.7s;
 }
+
+.Welcome2{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.Welcome3{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
